Uniform reformatting of brigadier definitions for my sanity, functionality improvements